monitoring/promtail/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: promtail
  namespace: promtail
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "promtail.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: promtail
          port: 9080
